# HL7Reader

./: .gitignore  hl7Main.hs  hl7Server.hs  hl7fields.hs  hl7message.hs  hl7reader.cabal  hl7segments.hs
parser/: fields.hs  hl7parser.hs  parserTypes.hs  segments.hs  util.hs
